Organized and HTML progress

--- a/Mobile/CollabCloud Mobile Followers.html
+++ b/Mobile/CollabCloud Mobile Followers.html
@@ -23,6 +23,9 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
+	table {
+		text-align: center;
+	}
 	</style>
 
 	<head>
@@ -33,13 +36,28 @@
 		<fieldset id="frame">
 			<table id="table">
 				<tr>
-					<td><img name="artist_image" src="http://theitechblog.com/media/soundcloud-download-music.png" width='300px' height='112px' align="left" alt="Artist Name">
+					<td>
+						Some Follower
+					</td>
+					<td>
+						<img name="followers_image" src="Images/Followers.jpg">300
+					</td>
 				</tr>
 				<tr>
-					<td><img name="artist_image" src="http://theitechblog.com/media/soundcloud-download-music.png" width='300px' height='112px' align="left" alt="Artist Name">
+					<td>
+						Guy Follower
+					</td>
+					<td>
+						<img name="followers_image" src="Images/Followers.jpg">300
+					</td>
 				</tr>
 				<tr>
-					<td><img name="artist_image" src="http://theitechblog.com/media/soundcloud-download-music.png" width='300px' height='112px' align="left" alt="Artist Name">
+					<td>
+						VIP Follower
+					</td>
+					<td>
+						<img name="followers_image" src="Images/Followers.jpg">300
+					</td>
 				</tr>
 			</table>
 		</fieldset>
